infrastructure/kubernetes/base/keycloak/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  labels:
    app.kubernetes.io/name: keycloak
    app.kubernetes.io/component: identity-provider
    app.kubernetes.io/part-of: fullstack-rust-react-template
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
    - name: management
      port: 9000
      targetPort: management
      protocol: TCP
  selector:
    app.kubernetes.io/name: keycloak
